  os.waitpid and os.read system calls where appropriate.

- Issue #6729: Added ctypes.c_ssize_t to represent ssize_t.

- Issue #6247: The argparse module has been added to the standard library.

- Issue #8235: _socket: Add the constant ``SO_SETFIB``.  SO_SETFIB is
  a socket option available on FreeBSD 7.1 and newer.

Extension Modules
-----------------

- Issue #5094: The ``datetime`` module now has a simple concrete class
  implementing ``datetime.tzinfo`` interface.  Instances of the new
  class, ``datetime.timezone``, return fixed name and UTC offset from
  their ``tzname(dt)`` and ``utcoffset(dt)`` methods.  The ``dst(dt)``
  method always returns ``None``.  A class attribute, ``utc`` contains
  an instance representing the UTC timezone.  Original patch by Rafe
  Kaplan.

- Issue #8973: Add __all__ to struct module; this ensures that
  help(struct) includes documentation for the struct.Struct class.

- Issue #3129: Trailing digits in struct format string are no longer ignored.
  For example, "1" or "ilib123" are now invalid formats and cause
  ``struct.error`` to be raised.  Patch by Caleb Deveraux.

- Issue #7384: If the system readline library is linked against ncurses,
  the curses module must be linked against ncurses as well. Otherwise it
  is not safe to load both the readline and curses modules in an application.

- Issue #2810: Fix cases where the Windows registry API returns
  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.

- Issue #8692: Optimize math.factorial: replace the previous naive
  algorithm with an improved 'binary-split' algorithm that uses fewer
  multiplications and allows many of the multiplications to be
  performed using plain C integer arithmetic instead of PyLong
  arithmetic.  Also uses a lookup table for small arguments.

- Issue #8674: Fixed a number of incorrect or undefined-behaviour-inducing
  overflow checks in the audioop module.
